<resources>
    <string name="app_name">Ketabeman</string>
    <string name="hint_username">نام کاربری</string>
    <string name="hint_password">رمز عبور</string>
    <string name="hint_name">نام کامل</string>
    <string name="btn_login">ورود</string>
    <string name="btn_register">عضویت</string>
    <string name="btn_link_to_register">هنوز عضو نیستید؟ همین حالا ثبت نام کن.</string>
    <string name="btn_link_to_login">قبلا عضو شدم.</string>
    <string name="welcome">خوش آمدید</string>
    <string name="btn_logout">خروج</string>
    <string name="name">نام کامل</string>
    <string name="next">بعدی</string>
    <string name="skip">رد کردن</string>
</resources>
